# EX3

./: Assignment_3.ipynb  BinaryExpression.h  Bind.cpp  Bind.h  CMakeLists.txt  Command.cpp  Command.h  ConnectCommand.cpp  ConnectCommand.h  DefineVarCommand.cpp  DefineVarCommand.h  DefiveVarCommand.cpp  DefiveVarCommand.h  Div.cpp  Div.h  Expression.h  If.cpp  If.h  Interpeter.h  Minus.cpp  Minus.h  Mul.cpp  Mul.h  Neg.cpp  Neg.h  Number.h  OpenServerCommand.cpp  OpenServerCommand.h  OpenSeverCommand.cpp  OpenSeverCommand.h  Plus.cpp  Plus.h  Print.cpp  Print.h  Sleep.cpp  Sleep.h  UnaryExpression.h  While.cpp  While.h  main.cpp  (+1 more)
